<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendDetails">

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/unknown"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/unknown"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/button_map"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textview_name" />

    <TextView
        android:id="@+id/textview_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/unknown"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/button_call"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textview_address" />

    <TextView
        android:id="@+id/textview_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="openEmailBtn"
        android:text="@string/unknown"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textview_phone" />

    <TextView
        android:id="@+id/textview_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/unknown"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/button_birthday"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textview_mail" />

    <TextView
        android:id="@+id/textview_website"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/unknown"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textview_birthday" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/address"
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_address"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/phone"
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mail"
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_mail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/birthday"
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_birthday"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/web"
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_website"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageview_picture"
        android:layout_width="228dp"
        android:layout_height="339dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/picture_description"
        android:onClick="openPictureBtn"
        app:layout_constraintBottom_toTopOf="@+id/button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_website"
        tools:srcCompat="@tools:sample/avatars" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_call"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openCallBtn"
        app:fabCustomSize="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_phone"
        app:layout_constraintEnd_toStartOf="@+id/button_message"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openMessageBtn"
        app:fabCustomSize="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openMapBtn"
        android:visibility="invisible"
        app:fabCustomSize="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_map" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="sendBirthdayMessageBtn"
        android:visibility="invisible"
        app:fabCustomSize="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="deleteFriendBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="116dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="openEditBtn"
        android:text="@string/edit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>